--- a/e2e/transactions/SendTransaction.yaml
+++ b/e2e/transactions/SendTransaction.yaml
@@ -39,16 +39,6 @@ tags:
       - assertVisible:
           id: send-asset-list
 
-# # Test Add Contact functionality
-# - tapOn:
-#     id: add-contact-button
-# - assertVisible:
-#     id: wallet-info-input
-# - tapOn: 'Cancel'
-# - tapOn:
-#     id: add-contact-button
-# - tapOn: 'Add Contact'
-
 # Test Send Functionality
 - tapOn:
     id: send-asset
@@ -63,6 +53,7 @@ tags:
       - assertVisible: .*Review
 - tapOn: .*Review
 
+# Test enter amount
 - assertVisible: 'Sending'
 - assertVisible: '$0.01'
 - assertVisible: 'rainbowwallet.eth'
@@ -71,36 +62,16 @@ tags:
 
 - runFlow: ../utils/MaybeSetupPin.yaml
 
+# Test transaction was done
 - assertVisible: 'Pending'
 - assertVisible: 'Sending.*'
 
-- extendedWaitUntil:
-    visible: Today
-    timeout: 120000
+- tapOn: Sending.*
 
-- assertVisible: .*Sent
-- tapOn: .*Sent
-- assertVisible: 'Sent'
-- assertVisible: '$0.01'
+- assertVisible: 'Sending'
 - retry:
     maxRetries: 3
     commands:
       - swipe:
           direction: DOWN
-- assertVisible: .*Sent
-# # Test updating contact name after edit
-# - tapOn:
-#     id: edit-contact-button
-# - tapOn: 'Edit Contact'
-# - inputText: '123'
-# - tapOn:
-#     id: wallet-info-submit-button
-# - assertVisible: 'rainbowwallet.eth123'
-
-# # Test showing Add Contact Button after deleting contact
-# - tapOn:
-#     id: edit-contact-button
-# - tapOn: 'Delete Contact'
-# - tapOn: 'Delete Contact'
-# - assertVisible:
-#     id: add-contact-button
+- assertVisible: Sending.*
