--- a/e2e/utils/ImportWalletWithKey.yaml
+++ b/e2e/utils/ImportWalletWithKey.yaml
@@ -7,7 +7,8 @@ env:
 - extendedWaitUntil:
     visible:
       id: welcome-screen
-    timeout: 30000
+    # the test fail quite often if the timeout is too low
+    timeout: 300000
 - openLink: rainbow://e2e/import?privateKey=${PKEY}&name=${NAME}
 # The first time a simulator opens a link it shows a dialog.
 - runFlow:
@@ -22,4 +23,5 @@ env:
 - extendedWaitUntil:
     visible:
       id: receive-card
-    timeout: 30000
+    # the test fail quite often if the timeout is too low
+    timeout: 300000
