--- a/e2e/onboarding/CreateWallet.yaml
+++ b/e2e/onboarding/CreateWallet.yaml
@@ -3,23 +3,26 @@ tags:
   - auth
   - parallel
 ---
-- launchApp:
-    clearState: true
-    clearKeychain: true
-    arguments:
-      isE2ETest: true
-- runFlow: ../utils/Prepare.yaml
-- assertVisible:
-    id: welcome-screen
-- tapOn: '.*Get a new wallet'
-- runFlow: ../utils/MaybeSetupPin.yaml
+- retry:
+    maxRetries: 3
+    commands:
+      - launchApp:
+          clearState: true
+          clearKeychain: true
+          arguments:
+            isE2ETest: true
+      - runFlow: ../utils/Prepare.yaml
+      - assertVisible:
+          id: welcome-screen
+      - tapOn: '.*Get a new wallet'
+      - runFlow: ../utils/MaybeSetupPin.yaml
 
-# Check wallet screen exists and has expected elements
-- assertVisible:
-    id: wallet-screen
-- assertVisible:
-    id: receive-card
-- assertVisible:
-    id: copy-address-button
-- assertVisible:
-    id: eth-card
+      # Check wallet screen exists and has expected elements
+      - assertVisible:
+          id: wallet-screen
+      - assertVisible:
+          id: receive-card
+      - assertVisible:
+          id: copy-address-button
+      - assertVisible:
+          id: eth-card
