--- a/e2e/transactions/SwapTransaction.yaml
+++ b/e2e/transactions/SwapTransaction.yaml
@@ -3,33 +3,36 @@ tags:
   - wallet
   - parallel
 ---
-- launchApp:
-    clearState: true
-    clearKeychain: true
-    arguments:
-      isE2ETest: true
-- runFlow: ../utils/Prepare.yaml
-- runFlow: ../utils/ImportWalletWithKey.yaml
+- retry:
+    maxRetries: 3
+    commands:
+      - launchApp:
+          clearState: true
+          clearKeychain: true
+          arguments:
+            isE2ETest: true
+      - runFlow: ../utils/Prepare.yaml
+      - runFlow: ../utils/ImportWalletWithKey.yaml
 
-# Send ETH to test wallet
-- tapOn:
-    id: fund-test-wallet-button
+      # Send ETH to test wallet
+      - tapOn:
+          id: fund-test-wallet-button
 
-# Connect to Anvil (test network)
-- tapOn:
-    id: dev-button-anvil
+      # Connect to Anvil (test network)
+      - tapOn:
+          id: dev-button-anvil
 
-# Open swap screen
-- tapOn:
-    id: swap-button
-- assertVisible:
-    id: swap-screen
-# Select DAI as output token
-- tapOn: 'Find a token to buy'
-- inputText: 'DAI'
-- tapOn:
-    id: token-to-buy-dai-1
-- assertVisible: 'DAI.*'
-- assertVisible: 'No Balance'
-# Add swap execution and validation.
-# Currenlty on detox we don't do either.
+      # Open swap screen
+      - tapOn:
+          id: swap-button
+      - assertVisible:
+          id: swap-screen
+      # Select DAI as output token
+      - tapOn: 'Find a token to buy'
+      - inputText: 'DAI'
+      - tapOn:
+          id: token-to-buy-dai-1
+      - assertVisible: 'DAI.*'
+      - assertVisible: 'No Balance'
+      # Add swap execution and validation.
+      # Currenlty on detox we don't do either.
