--- a/e2e/utils/ImportWalletWithKey.yaml
+++ b/e2e/utils/ImportWalletWithKey.yaml
@@ -22,6 +22,6 @@ env:
 # Wait for the wallet screen to load.
 - extendedWaitUntil:
     visible:
-      id: receive-card
+      id: eth-card
     # the test fail quite often if the timeout is too low
     timeout: 30000
