--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -3,66 +3,74 @@ tags:
   - wallet
   - parallel
 ---
-- launchApp:
-    clearState: true
-    clearKeychain: true
-    arguments:
-      isE2ETest: true
-- runFlow: ../utils/Prepare.yaml
-- runFlow: ../utils/ImportWalletWithKey.yaml
-
-# Send ETH to test wallet
-- tapOn:
-    id: fund-test-wallet-button
-
-# Connect to Anvil (test network)
-- tapOn:
-    id: dev-button-anvil
-
-# Open send sheet
 - retry:
     maxRetries: 3
     commands:
-      - swipe:
-          direction: DOWN
+      - launchApp:
+          clearState: true
+          clearKeychain: true
+          arguments:
+            isE2ETest: true
+      - runFlow: ../utils/Prepare.yaml
+      - runFlow: ../utils/ImportWalletWithKey.yaml
+
+      # Send ETH to test wallet
+      - tapOn:
+          id: fund-test-wallet-button
+
+      # Connect to Anvil (test network)
+      - tapOn:
+          id: dev-button-anvil
+
+      # Open send sheet
+      - retry:
+          maxRetries: 3
+          commands:
+            - assertVisible:
+                id: 'balance-coin-row-Ethereum'
+
+      - tapOn: 'Rainbow Pooly'
+
       - assertVisible:
-          id: 'balance-coin-row-Ethereum'
-- tapOn:
-    id: send-button
-- assertVisible:
-    id: send-asset-form-field
+          id: 'wrapped-nft-Rainbow Pooly 104'
 
-# Test ENS address input
-- inputText: 'rainbowwallet.eth'
-- retry:
-    maxRetries: 3
-    commands:
-      - assertVisible:
-          id: send-asset-list
+      - tapOn:
+          id: 'wrapped-nft-Rainbow Pooly 104'
 
-# Test Add Contact functionality
-- tapOn:
-    id: add-contact-button
-- assertVisible:
-    id: wallet-info-input
-- tapOn: 'Cancel'
-- tapOn:
-    id: add-contact-button
-- tapOn: 'Add Contact'
+      # we need to wait for the sheet to be done before clicking on the send else Maestro will click on the image
+      - waitForAnimationToEnd:
+          timeout: 2000
 
-# Test updating contact name after edit
-- tapOn:
-    id: edit-contact-button
-- tapOn: 'Edit Contact'
-- inputText: '123'
-- tapOn:
-    id: wallet-info-submit-button
-- assertVisible: 'rainbowwallet.eth123'
+      - tapOn:
+          id: 'send-action-button'
 
-# Test showing Add Contact Button after deleting contact
-- tapOn:
-    id: edit-contact-button
-- tapOn: 'Delete Contact'
-- tapOn: 'Delete Contact'
-- assertVisible:
-    id: add-contact-button
+      # Test ENS address input
+      - inputText: 'rainbowwallet.eth'
+      - assertVisible: '.*Review'
+      - tapOn: '.*Review'
+
+      - assertVisible: 'Sending'
+      - assertVisible: 'Rainbow Pooly 104'
+      - assertVisible: 'to'
+      - assertVisible: 'rainbowwallet.eth'
+
+      # iOS is 'Hold to Send' button is stuck on 'Loading...'
+      # atm for some reason. Need to investigate. Unblocking e2e for now.
+      - runFlow:
+          when:
+            platform: Android
+          commands:
+            - longPressOn: 'Hold to Send'
+            - runFlow: ../utils/MaybeSetupPin.yaml
+
+            # Test transaction was done
+            - assertVisible: 'Pending'
+            - assertVisible: 'Sending*.'
+
+            - tapOn: Sending*.
+
+            - assertVisible: 'Sending'
+            - assertVisible: '.*Tx Hash*.'
+            - assertVisible: 'View on Etherscan'
+            - swipe:
+                direction: DOWN
