--- a/package.json
+++ b/package.json
@@ -354,6 +354,7 @@
     "dotenv": "8.2.0",
     "eslint": "8.22.0",
     "eslint-config-rainbow": "4.3.0",
+    "eslint-plugin-yml": "1.18.0",
     "graphql": "15.3.0",
     "husky": "8.0.1",
     "jest": "29.7.0",
@@ -370,7 +371,8 @@
     "typescript": "5.5.4",
     "typescript-coverage-report": "0.6.1",
     "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "yaml-eslint-parser": "1.3.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0"
@@ -478,7 +480,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,graphql}": [
+    "*.{js,jsx,ts,tsx,graphql,yml,yaml}": [
       "prettier --write",
       "eslint --cache"
     ]
