--- a/e2e/transactions/SendNft.yaml
+++ b/e2e/transactions/SendNft.yaml
@@ -65,12 +65,12 @@ tags:
 
             # Test transaction was done
             - assertVisible: 'Pending'
-            - assertVisible: 'Sending*.'
+            - assertVisible: 'Sending.*'
 
-            - tapOn: Sending*.
+            - tapOn: Sending.*
 
             - assertVisible: 'Sending'
-            - assertVisible: '.*Tx Hash*.'
+            - assertVisible: '.*Tx Hash.*'
             - assertVisible: 'View on Etherscan'
             - swipe:
                 direction: DOWN
