base setup of rnef

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -57,7 +57,8 @@ target 'Rainbow' do
     end
   end
   # Pods for Rainbow
-  config = use_native_modules!
+  # config = use_native_modules!
+  config = use_native_modules!(['npx', 'rnef', 'config', '-p', 'ios'])
 
   # Flags change depending on the env values.
   flags = get_default_flags()
