--- a/package.json
+++ b/package.json
@@ -120,6 +120,9 @@
     "@react-navigation/stack": "6.3.29",
     "@reown/walletkit": "1.1.2",
     "@reservoir0x/reservoir-sdk": "2.3.0",
+    "@rnef/cli": "0.7.13",
+    "@rnef/platform-ios": "0.7.13",
+    "@rnef/plugin-metro": "0.7.13",
     "@rudderstack/rudder-sdk-react-native": "2.0.0",
     "@sentry/react-native": "5.35.0",
     "@shopify/flash-list": "1.8.0",
