--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "install-pods-fast": "cd ios && bundle exec pod install && cd ..",
     "install-pods-fast-jsc": "cd ios && bundle exec env USE_HERMES=NO pod install && cd ..",
     "install-pods-no-flipper": "cd ios && bundle exec env SKIP_FLIPPER=true pod install --repo-update && cd ..",
-    "ios": "react-native run-ios --simulator='iPhone 16 Pro'",
+    "ios": "yarn rnef run:ios -- --simulator='iPhone 16 Pro'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "yarn format:check && yarn lint:ts && yarn lint:js",
@@ -43,7 +43,7 @@
     "lint:js:ci": "eslint --quiet",
     "lint:ts": "yarn tsc --skipLibCheck --noEmit",
     "postinstall": "./scripts/postinstall.sh",
-    "start": "react-native start",
+    "start": "yarn rnef start",
     "start:clean": "yarn clean:packager && react-native start -- --reset-cache",
     "test": "jest --detectOpenHandles --forceExit",
     "ts-coverage": "typescript-coverage-report",
@@ -120,9 +120,9 @@
     "@react-navigation/stack": "6.3.29",
     "@reown/walletkit": "1.1.2",
     "@reservoir0x/reservoir-sdk": "2.3.0",
-    "@rnef/cli": "0.7.13",
-    "@rnef/platform-ios": "0.7.13",
-    "@rnef/plugin-metro": "0.7.13",
+    "@rnef/cli": "0.7.14",
+    "@rnef/platform-ios": "0.7.14",
+    "@rnef/plugin-metro": "0.7.14",
     "@rudderstack/rudder-sdk-react-native": "2.0.0",
     "@sentry/react-native": "5.35.0",
     "@shopify/flash-list": "1.8.0",
@@ -321,9 +321,6 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@lavamoat/allow-scripts": "3.0.1",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
     "@react-native/babel-preset": "0.79.0",
     "@react-native/metro-config": "0.79.0",
     "@react-native/typescript-config": "0.79.0",
