--- a/e2e/transactions/SwapTransaction.yaml
+++ b/e2e/transactions/SwapTransaction.yaml
@@ -37,7 +37,7 @@ tags:
       - hideKeyboard
       # cant get swap-bottom-action-button to work, but that would be ideal.
       - longPressOn:
-          point: 63%, 88%
+          id: swap-bottom-action-button
       - runFlow: ../utils/MaybeSetupPin.yaml
       - tapOn:
           id: tab-bar-icon-ProfileScreen
