--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "install-pods-fast": "cd ios && bundle exec pod install && cd ..",
     "install-pods-fast-jsc": "cd ios && bundle exec env USE_HERMES=NO pod install && cd ..",
     "install-pods-no-flipper": "cd ios && bundle exec env SKIP_FLIPPER=true pod install --repo-update && cd ..",
-    "ios": "yarn rnef run:ios -- --simulator='iPhone 16 Pro'",
+    "ios": "rnef run:ios --scheme Rainbow --configuration Debug",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "yarn format:check && yarn lint:ts && yarn lint:js",
